[package]
name = "libeeyyee"
version = "0.1.0"
authors = ["gitter2020 <gitter2020@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.0.0"
x25519-dalek = "1.1"

[dependencies.rand_core]
version = "0.5"
default-features = false
