[package]
name = "libeeyyee"
version = "0.1.0"
authors = ["cleanyong <cleanyong2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.0.0"
x25519-dalek = "1.1"
rand = "0.8.3"
k256 = "0.8.0-pre"
cfg-if = "1.0"
elliptic-curve = { version = "0.9", default-features = false, features = ["hazmat"] }
hex-literal = { version = "0.3", optional = true }
sha2 = { version = "0.9", optional = true, default-features = false }
sha3 = { version = "0.9", optional = true, default-features = false }

[dependencies.rand_core]
version = "0.5"
features = ["getrandom"]

[dependencies.ecdsa-core]
version = "=0.11.0-pre.1"
package = "ecdsa"
optional = true
default-features = false
features = ["der"]

[dev-dependencies]
criterion = "0.3"
ecdsa-core = { version = "=0.11.0-pre.1", package = "ecdsa", default-features = false, features = ["dev"] }
hex-literal = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.0"
#rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["arithmetic", "pkcs8", "std"]
arithmetic = ["elliptic-curve/arithmetic"]
digest = ["ecdsa-core/digest"]
ecdh = ["arithmetic", "elliptic-curve/ecdh", "zeroize"]
ecdsa = ["arithmetic", "digest", "ecdsa-core/sign", "ecdsa-core/verify", "zeroize"]
expose-field = ["arithmetic"]
field-montgomery = []
force-32-bit = []
jwk = ["elliptic-curve/jwk"]
keccak256 = ["digest", "sha3"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["elliptic-curve/pkcs8", "zeroize"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]
std = ["ecdsa-core/std", "elliptic-curve/std"] # TODO: use weak activation for `ecdsa-core/std` when available
zeroize = ["elliptic-curve/zeroize"]
